// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-with-no-trailing-newline.hbs 1`] = `
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;

exports[`empty-with-trailing-newline.hbs 1`] = `

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;

exports[`end-of-line-last.hbs 1`] = `
a bare string to hightlight eol last handling
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a bare string to hightlight eol last handling
`;
